<resources>
    <string name="app_name">Simple Calc</string>
    <string name="firstNumberTitle">First Number</string>
    <string name="secondNumberTitle">Second Number</string>
    <string name="buttonGroupName">Operation</string>
    <string name="sumSymbol">+</string>
    <string name="subtractSymbol">-</string>
    <string name="divideSymbol">/</string>
    <string name="multiplySymbol">*</string>
    <string name="resultTitle">Result:</string>
    <string name="defaultResultText">0.0</string>
    <string name="decimalFormatPattern">###.##</string>
</resources>
