<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="myrovh.simplecalc.MainActivity">

    <LinearLayout
        android:id="@+id/AppContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/FirstNumberDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstNumberTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/firstNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/secondNumberDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondNumberTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/secondNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/buttonDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonGroupName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sumButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:onClick="OperationButtonPressed"
                android:text="@string/sumSymbol" />

            <Button
                android:id="@+id/subtractButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:onClick="OperationButtonPressed"
                android:text="@string/subtractSymbol" />

            <Button
                android:id="@+id/divideButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:onClick="OperationButtonPressed"
                android:text="@string/divideSymbol" />

            <Button
                android:id="@+id/multiplyButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:onClick="OperationButtonPressed"
                android:text="@string/multiplySymbol" />
        </LinearLayout>

        <TextView
            android:id="@+id/resultDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultResultText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="75sp" />
    </LinearLayout>
</RelativeLayout>
